# 2025-nasa-space-apps-challenge

./: .env  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO  index.html  package-lock.json  package.json  setup-mingw.bat  setup-vcpkg.bat
.rough/: NOTES.md
assets/: README.md
assets/3Dmodels/: nasa_aqua_eos_pm-1_satellite.glb
assets/scripts/: convert_exr_to_png.py  extract_frames_from_mp4.py  generate_metadata.py
data/: MODIS_A-JPL-L2P-v2019.0_metadata.json  nasadata.txt
demo/: README.md
docs/: CHALLENGE.md  HELP.md  PLANNING.md  SETUP.md  TEAM.md  VENUE.md
docs/story/: Aero_dynamics.txt  Aqua_MODIS_Bio.txt  Orbital eccentricity.txt  STORY.md
scripts/: README.md  download_ocean_data.py
src/: App.jsx  CMakeLists.txt  OpenXRManager.cpp  OpenXRManager.h  WelcomePage.jsx  about.jsx  download_ocean_data.py  main.cpp  main.js  main.jsx  three.js
src/api/: AzureOpenAI.jsx  EULA  fetchNasaData.js
src/moon/: Moon.jsx
src/planets/: Earth.jsx  Jupiter.jsx  Mars.jsx  Mercury.jsx  Neptune.jsx  Saturn.jsx  Uranus.jsx  Venus.jsx
src/planets/earth/: Earth.jsx  nasadata.py
src/satellite/: Satellite.jsx
